# algorithms

./: .gitignore  README.md  pyproject.toml  requirements.in  requirements.txt
.devcontainer/: devcontainer.json
Chapter01/: chapter1.py
Chapter02/: binary_search.py  linear_search.py  matrix_chain.py  merge_sort.py
Chapter03/: Fibonacci_series.py  MatrixChain_multiplication.py  binary_search.py  dijkstra.py  dyna_fib.py  factorial.py  merge_sort.py
Chapter04/: CircularList.py  SinglyLinkedList.py  append_at_any_location_singly_linkedlist.py  delete_operation_doubly_linkedlist.py  delete_operation_singly_linkedlist.py  doubly_linked_list.py  faster_append_singly_linked_list.py  list_traversal_singly_linklist.py
Chapter05/: Linked_list_based_queue.py  List_based_queue.py  Queue_application.py  Stack.py  Stack_application.py
Chapter06/: binary_search_tree.py  level_order_traversal.py  reverse_polish_expression.py  tree_traversal.py
Chapter07/: heap.py  heap_sort.py  priorityQueue.py  priorityQueueHeap.py
Chapter08/: hashing.py  hashtable_chaining.py
Chapter09/: breadth_first_search.py  depth_first_search.py  graph.py
Chapter10/: Unordered_linear_search.py  binary_search_iterative.py  binary_search_recursive.py  exponential_search.py  interpolation_search.py  jump_search.py  search_ordered_list.py
Chapter11/: Insertion_sort.py  Quick_sort.py  Selection_Sort.py  Tim_sort.py  bubble_sort.py
Chapter12/: deterministic_selection.py  randomized_search.py
Chapter13/: Boyer_Moore_String_Matching.py  Brute_force_string_matching.py  KMP.py  (+2 more)
src/: shaks_sort  (+4 more)
(+10 files in other folders)
